# tcp-chatroom

./: README.md
client/: Cargo.toml
client/duang/: Cargo.toml
client/duang/src/: error.rs  io.rs  lib.rs
client/src/: cli.rs  config.rs  guard.rs  lib.rs  main.rs  models.rs
client/src/conn/: mod.rs  persistent.rs  short.rs
client/src/models/: mod.rs
client/src/protocol/: body.rs  mod.rs  persistent.rs  request.rs  response.rs
client/src/protocol/short/: request.rs  response.rs
client/src/socket/: mod.rs  persistent.rs  short.rs
client/src/ui/: message.rs  mod.rs  port.rs  view.rs
client/src/ui/components/: chat_list.rs  mod.rs
docs/: protocol.md
server/: Cargo.toml
server/entity/: Cargo.toml
server/entity/src/: group.rs  group_user.rs  lib.rs  prelude.rs  user.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20230107_125328_migration.rs
server/migration/src/tables/: group.rs  group_user.rs  mod.rs  user.rs
server/src/: connection.rs  main.rs  models.rs  router.rs  server.rs
server/src/dba/: group.rs  group_user.rs  user.rs
server/src/handlers/: chat.rs  group.rs  guard.rs  info.rs  mod.rs
server/src/io/: mod.rs
server/src/middlewares/: authentication.rs  message_queue.rs  mod.rs
server/src/protocol/: body.rs  conn.rs  mod.rs  request.rs  response.rs
server/src/protocol/persistent/: backdoor.rs  mod.rs
server/src/protocol/short/: mod.rs  request.rs  response.rs
server/src/service/: mod.rs  router.rs
server/src/service/handlers/: ping.rs
server/src/socket/: mod.rs  persistent.rs  short.rs
server/src/utils/: codec.rs  hasher.rs  mod.rs  uid_bucket.rs
(+12 files in other folders)
