[package]
name = "client"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "duang"]

[dependencies]
protocol = { path = "../protocol" }
duang = { path = "duang" }
tuirealm = "1.8.0"
tui-realm-stdlib = "1.2.0"
rmp-serde = "1.1.1"
dirs = "4.0.0"
clap = { version = "4.1.1", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.68"
requestty = "0.5.0"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
indexmap = "1.9.2"
