[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

[dependencies]
protocol = { path = "../protocol" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
entity = { path = "entity" }
rmp-serde = "1.1.1"
rs-snowflake = "0.6.0"
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
once_cell = "1.17.0"
sha2 = "0.10.6"
jwt-simple = "0.11.2"

[dependencies.tokio]
version = "1.24.1"
features = ["rt", "sync", "net", "macros", "rt-multi-thread", "io-util"]

[dependencies.sea-orm]
version = "0.10.6"
features = ["sqlx-postgres", "runtime-tokio-rustls"]
