[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmp-serde = "1.1.1"
serde = { version = "1.0.160", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.tokio]
version = "1.27.0"
features = ["rt", "sync", "net", "macros", "rt-multi-thread", "io-util"]
